# detect

./: .gitignore  DATASETS.md  IOS_SETUP_RU.md  LICENSES.md  MODEL_SELECTION.md  Makefile  README.md  pyproject.toml  requirements-lock.txt
artifacts/reports/: final_report.md
configs/: classes.yaml  data.yaml  export.yaml  grouping.yaml  train.yaml
ios/ObjectLens/ObjectLens/: ObjectLensApp.swift
ios/ObjectLens/ObjectLens.xcodeproj/: project.pbxproj
ios/ObjectLens/ObjectLens/Models/: Detection.swift
ios/ObjectLens/ObjectLens/Resources/: Localizable.xcstrings
ios/ObjectLens/ObjectLens/Services/: GroupingService.swift  Logger.swift
ios/ObjectLens/ObjectLens/UI/: RootView.swift
ios/ObjectLens/ObjectLensTests/: GroupingServiceTests.swift
scripts/: benchmark.py  download_datasets.py  evaluate.py  export_coreml.py  one_click.bat  one_click.ps1  one_click_windows.ps1  prepare_dataset.py  setup_macos.sh  setup_windows.ps1  train.py  validate_coreml.py
src/object_recognition/configuration/: config.py
src/object_recognition/data/: annotations.py  split.py
src/object_recognition/evaluation/: metrics.py
src/object_recognition/grouping/: boxes.py  grouping.py
tests/: test_config.py  test_data.py  test_grouping.py
